home page : post final

--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 
 <body style="text-align:center;width:100% !important;">
     <table
-        style="width:40% !important;height:100%;border:2px solid black;border-spacing:0;text-align: center;margin-left:auto;margin-right:auto !important">
+        style="width:60% !important;height:100%;border:2px solid black;border-spacing:0;text-align: center;margin-left:auto;margin-right:auto !important">
         <thead style="background-color:rgb(118, 148, 202);border: 0px;">
             <tr
                 style="background-color:rgb(118, 148, 202);border-color:rgb(118, 148, 202);border-collapse: collapse;border-spacing: 0px;padding: 0px;">
@@ -153,13 +153,77 @@
                         Radically stripped down but still a place to come. <br>
                         Feature now our Top 10 freeware list as well as site news
                     </p>
-
+                    <hr style="width:95%;size: 5px;;text-align:center;color:grey">
+                    <h1 style="font-size:larger;">HOT PICKS</h1>
                 </td>
             </tr>
             <tr>
-                <td colspan="12"></td>
+                <td colspan="4" style="width:30%;">
+                    <h4>Video Tutorials</h4><br>
+                    <img src="home2.PNG" alt="a person holding a video camera"><br>
+                </td>
+                <td colspan="4" style="width:30%;">
+                    <h4>Quick JavaScript Clock</h4>
+                    <p>Wed Sep 28 2022 19:07:16 GMT+0100 (heure normale d’Afrique de l’Ouest)</p><br>
+                </td>
+                <td colspan="4" style="width:30%;">
+                    <h4>Disable right clicking</h4><br>
+                    <img src="home3.PNG" alt="a crossed mouse pointer"><br>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="4" style="width:30%;">
+                    <p>Our condensed guide on what you need to make web video and how you go about it</p>
+                </td>
+                <td colspan="4" style="width:30%;">
+                    <p>Want to add a quick time and date script to your webpages like the one above? Then check out this
+                        quick <a href="cooltips.html"> Cool tip</a></p>
+                </td>
+                <td colspan="4" style="width:30%;">
+                    <p>One of current <a href="cooltips.html"> Cool tips</a> favourites is the script to stop people
+                        right clicking and pinching your images etc.</p>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="11" style="height: 6px;width: 85%;"></td>
+                <td style="height:6px;width: 15%;">
+                    <a href="#TOP" style="color:rgb(119, 63, 63);text-decoration: none;">TOP <img src="home4.PNG"
+                            alt="triangle button"></a>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="12" style="text-align:left;">
+                    <p style="font-family:arial ;">
+                        This site is not endorsed or endorses either Microsoft® or Netscape products or any other
+                        products mentioned within</p>
+                    <br>
+                    <p style="font-size:x-small;"> Microsoft® is either registered trademarks or trademarks <br>
+                        of Microsoft Corporation in the United States and/or other countries </p><br>
+                    <p style="font-size:x-small;"> Netscape, Netscape Certificater Server, Netscape FastTrack Server,
+                        Netscape Navigator, Netscape
+                        ONE, SuiteSpot, and the Netscape N and Ship's Wheel logos are registered trademarks of Netscape
+                        Communications Corporation in the United States and other countries. Netscape composer and
+                        communicator are also trademarks of Netscape Communications Corporation, which may be registered
+                        in other countries </p><br>
+                    <p style="font-size:x-small;">All other trademarks where known are acknowledged </p>
+                </td>
             </tr>
         </tbody>
+        <tfoot>
+            <tr>
+                <td style="width:10%;">
+                    <img src="home5.PNG" alt="html shrinker logo" width="90px" height="40px">
+                </td>
+                <td colspan="11" style="width:900%;font-size: small;">
+                    <a href="terms & conditions.html">terms & conditions copyright © 1999-2004</a>
+                    <a href="legal notices.html">legal notices</a><br>
+                    <a href="home.html">home</a>
+                    <a href="credits.html">credits</a>
+                    <a href="contact.html">contact us</a>
+                    <a href="links.html">link to us</a>
+                </td>
+            </tr>
+        </tfoot>
     </table>
 </body>
 
