liks page : post final

--- a/links.html
+++ b/links.html
@@ -15,7 +15,7 @@
             <tr
                 style="background-color:rgb(118, 148, 202);border-color:rgb(118, 148, 202);border-collapse: collapse;border-spacing: 0px;padding: 0px;">
                 <td colspan="9" style="text-align:center;width:90%;">
-                    <img src="home1.PNG" width="90%" height="70px">
+                    <img src="home1.PNG" width="600px" height="90px">
                 </td>
                 <td colspan="3" style="text-align:center;width: 30%;">
                     <label for="search"
@@ -23,6 +23,7 @@
                         SEARCH</label><br>
                     <input type="search" name="search" id="search"><br>
                     <input type="submit" value="Go!">
+
                     </form>
                 </td>
             </tr>
@@ -85,7 +86,7 @@
                 </td>
             </tr>
             <tr>
-                <td colspan="10" style="border-right: 2px solid black ;text-align: left;padding-left: 10px;">
+                <td colspan="10" style="border-right: 2px solid black ;text-align: left;padding-left: 10px;width: 70%;">
                     <p>Here is our list of useful links. <br>
                         We've divided them into relevant categories</p>
                     <p>If you find any of links out of date or you've one to suggest please <a
@@ -171,12 +172,168 @@
                         </tr>
                     </table>
                     <hr style="color:grey ;height: 4px;background-color: grey;">
+                    <table>
+                        <tr>
+                            <td style="width: 40px;text-align: center;">
+                                <a href="imageresouces.html"
+                                    style="text-decoration:none ;color: black;font-weight: bold;">Immage Resources</a>
+                            </td>
+                            <td style="width:500 ;text-align: left;">
+                                These links include handy online free image galleries and advice sites
+                            </td>
+                        </tr>
+                    </table>
+                    <hr style="color:grey ;height: 4px;background-color: grey;">
 
-                <td>
-
+                    <table>
+                        <tr>
+                            <td style="width: 40px;text-align: center;">
+                                <a href="audiovisualresources.html"
+                                    style="text-decoration:none ;color: black;font-weight: bold;">Audio/Visual
+                                    Resources</a>
+                            </td>
+                            <td style="width:500 ;text-align: left;">
+                                Need some more hints about putting sound or vision on your site . Try these sites out
+                            </td>
+                        </tr>
+                    </table>
+                    <hr style="color:grey ;height: 4px;background-color: grey;">
+                    <table>
+                        <tr>
+                            <td style="width: 40px;text-align: center;">
+                                <a href="J&JS.html" style="text-decoration:none ;color: black;font-weight: bold;">Java &
+                                    JavaScript</a>
+                            </td>
+                            <td style="width:500 ;text-align: left;">
+                                These links cover tutorials, free scripts/applets and a whole host of resources
+                            </td>
+                        </tr>
+                    </table>
+                    <hr style="color:grey ;height: 4px;background-color: grey;">
+                    <table>
+                        <tr>
+                            <td style="width: 40px;text-align: center;">
+                                <a href="ativelinkss.html"
+                                    style="text-decoration:none ;color: black;font-weight: bold;">Active X Links</a>
+                            </td>
+                            <td style="width:500 ;text-align: left;">
+                                Learn more about Microsoft's® webbased technology
+                            </td>
+                        </tr>
+                    </table>
+                    <hr style="color:grey ;height: 4px;background-color: grey;">
+                    <table>
+                        <tr>
+                            <td style="width: 40px;text-align: center;">
+                                <a href="cgi&stripting.html"
+                                    style="text-decoration:none ;color: black;font-weight: bold;">CGI & Scripting
+                                    Links</a>
+                            </td>
+                            <td style="width:500 ;text-align: left;">
+                                From tutorial on CGI, PHP, ASP etc. to other sites which will host Script services for
+                                you for free
+                            </td>
+                        </tr>
+                    </table>
+                    <hr style="color:grey ;height: 4px;background-color: grey;">
+                    <table>
+                        <tr>
+                            <td style="width: 40px;text-align: center;">
+                                <a href="download.html"
+                                    style="text-decoration:none ;color: black;font-weight: bold;">Download Links</a>
+                            </td>
+                            <td style="width:500 ;text-align: left;">
+                                Useful sites to get freeware and shareware from
+                            </td>
+                        </tr>
+                    </table>
+                    <hr style="color:grey ;height: 4px;background-color: grey;">
+                    <table>
+                        <tr>
+                            <td style="width: 40px;text-align: center;">
+                                <a href="otherresouces.html"
+                                    style="text-decoration:none ;color: black;font-weight: bold;">Other Resources</a>
+                            </td>
+                            <td style="width:500 ;text-align: left;">
+                                Covers all other cool handy links
+                            </td>
+                        </tr>
+                    </table>
+                    <hr style="color:grey ;height: 4px;background-color: grey;">
+                <td style="text-align:start ;width: 30%;">
+                    <table style="width:100% ;height:50% ;text-align: start;">
+                        <tr>
+                            <td
+                                style="background-color:rgb(86, 86, 138) ;height: 150px;width: 60px;font-weight:bold;text-align: center;">
+                                OTHER USEFUL AREAS</td>
+                        </tr>
+                        <tr>
+                            <td style="height: 150px;width: 60px;text-align: center;">
+                                <p><a href="tools.html"><b>Top Ten Tool</b><br>
+                                        <img src="links2.PNG" alt="tools image"></a><br>
+                                    Our Top ten tools list our updated guide to 10 hot tools for webdesign which you can
+                                    download
+                                </p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="height: 150px;width: 60px;text-align: center;">
+                                <p> <a href="glossary.html"><img src="links3.PNG" alt="glossary image"></a><br>
+                                    Unsure of a term? Try here
+                                </p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="height: 150px;width: 60px;text-align: center;">
+                                <p> <a href="tips.html"><img src="links4.PNG" alt="cool tips image"></a><br>
+                                    Handy hints to brighten up your site
+                                </p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="height: 150px;width: 60px;text-align: center;">
+                                <p> <a href="forum.html"><img src="tuto1.PNG" alt="cool tips image"></a><br>
+                                    Our new forum is a meeting point to seek advice & swap ideas
+                                </p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img src="links5.PNG" alt="amazon logo">
+                                <img src="links6.PNG" alt="amazon logo">
+                            </td>
+                        </tr>
+                    </table>
                 </td>
             </tr>
         </tbody>
+        <tfoot style="height:150px;">
+            <hr style="color:grey ;background-color: grey;">
+            <tr>
+                <td colspan="12" style="text-align:center ;height: 230px;">
+                    <p></p>
+                    <p style="text-align: left;">Can't find what you want try yahoo<br>
+                    <form action="search.php" style="text-align: left;">
+                        <label for="search">
+                            <img src="links1.PNG" alt="yahoo logo">
+                        </label>
+                        <input type="search" name="search" id="search"><br>
+                        <input type="submit" value="Envoyer" id="search">
+                        <a href="options.html" style="font-size: x-small;">options</a>
+                    </form>
+                    </p>
+                    <a href="#top"><img src="tuto3.PNG" alt="down arrow button"></a><br>HOME
+                    <p></p><br>
+                    <p></p><br>
+                    <a href="terms & conditions.html">terms & conditions copyright © 1999-2004</a>
+                    <a href="legal notices.html">legal notices</a><br>
+                    <a href="home.html">home</a>
+                    <a href="credits.html">credits</a>
+                    <a href="contact.html">contact us</a>
+                    <a href="links.html">link to us</a>
+                </td>
+            </tr>
+        </tfoot>
     </table>
 </body>
 
